crates/nash-driver/src/compile/snapshots/nash_driver__compile__nitpick_source_tests__let_def_body_checked.snap
---
source: crates/nash-driver/src/compile/nitpick_source_tests.rs
description: "module Main exposing (..)\nimport Primitive exposing (type bool(..), Data(..))\nimport Builtin\nimport Eq exposing (Eq)\nimport Literal exposing (FromInt, FromString, FromBytes)\nf flag =\n    let\n        g x =\n            case x of\n                True -> ()\n    in\n    g flag\n"
info: diagnostic
---
nash::pattern::incomplete

  × Case expression is not exhaustive.
    ╭─[Main.nash:9:13]
  8 │             g x =
  9 │ ╭─▶             case x of
 10 │ │                   True -> ()
 11 │ ╰─▶     in
 12 │         g flag
    ╰────
  help: Missing patterns:

            False

        Add the missing branches; use `todo` for unfinished bodies.
