crates/nash-driver/src/compile/snapshots/nash_driver__compile__nitpick_source_tests__let_destructure_value_and_body_checked.snap
---
source: crates/nash-driver/src/compile/nitpick_source_tests.rs
description: "module Main exposing (..)\nimport Primitive exposing (type bool(..), Data(..))\nimport Builtin\nimport Eq exposing (Eq)\nimport Literal exposing (FromInt, FromString, FromBytes)\nf flag =\n    let\n        True = (case flag of\n                    True -> True)\n    in\n    case flag of\n        False -> ()\n"
info: diagnostic
---
nash::pattern::incomplete

  × Binding pattern is not exhaustive.
   ╭─[Main.nash:8:9]
 7 │     let
 8 │         True = (case flag of
   ·         ────
 9 │                     True -> True)
   ╰────
  help: Missing patterns:

            False

        Use a case expression to handle the missing patterns.

nash::pattern::incomplete

  × Case expression is not exhaustive.
    ╭─[Main.nash:8:17]
  7 │         let
  8 │ ╭─▶         True = (case flag of
  9 │ ╰─▶                     True -> True)
 10 │         in
    ╰────
  help: Missing patterns:

            False

        Add the missing branches; use `todo` for unfinished bodies.

nash::pattern::incomplete

  × Case expression is not exhaustive.
    ╭─[Main.nash:11:5]
 10 │         in
 11 │ ╭─▶     case flag of
 12 │ ╰─▶         False -> ()
    ╰────
  help: Missing patterns:

            True

        Add the missing branches; use `todo` for unfinished bodies.
